# usgs-pub-wh-mcp

./: .dockerignore  .env.example  .gitignore  AUDIT.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  SECURITY_LOGGING_ENHANCEMENTS.md  docker-compose.yml  main.py  pyproject.toml  usgs-mcp.tgz
chart/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
docs/: APPROACHES.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  service.yaml
scripts/: install.sh
security/: __init__.py  audit.py  auth.py  bearer.py  config.py  context_limits.py  http_client.py  rate_limiter.py  schema_compat.py  tool_registry.py  tracing.py  validation.py
tests/: __init__.py  run_all_tests.py  test_api_integration.py  test_auth_security.py  test_bearer_auth.py  test_llm_benchmark_tasks.py  test_owasp_llm_top10.py  test_owasp_mcp_top10.py  test_security_controls.py  test_security_enhancements.py  test_tool_discovery.py  test_tool_registry_coverage.py  test_tracing.py  test_user_queries.py
