[project]
name = "usgs-warehouse-mcp"
version = "0.2.0"
description = "Security-hardened MCP server for the USGS Publications Warehouse API"
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx[http2]>=0.28.0",
    "python-dotenv>=1.2.1",
    "cryptography>=46.0.5",
]

[project.scripts]
usgs-warehouse-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "security"]
only-include = ["main.py", "security/"]

[tool.hatch.build.targets.sdist]
include = ["main.py", "security/", "README.md", "SECURITY.md"]

[dependency-groups]
dev = [
    "openai>=2.21.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "pip-audit>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
